--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <section class="project_disclaimer">
                 <h3>*THIS IS A COLLEGE PROJECT*</h3>
             </section>
-            <section>
+            <section style="margin-left: auto; margin-right: auto;>
                 <h3>Please fill out the form and we will contact you shortly:</h3>
                 <form action="https://foo.com" method="post">
                     <label for="first-name">First name:<span class="required">*</span></label>
